Changed button hover color

--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
     <div class="container">
         <div class="row games">
             <div class="col-md-4 colors">
-                <a href="colors.html">
+                <a href="colorsGame.html">
                     <button class="btn bg-transparent">Colors</button>
                 </a>
             </div>
