--- a/colorsGame.html
+++ b/colorsGame.html
@@ -15,6 +15,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    
     <title>Colors</title>
 </head>
 
@@ -30,37 +31,56 @@
                 <h1 class="colors">Colors</h1>
             </div>
             <div class="container">
+                <div id="colors-game" class="hide">
+
+                    <div class="row row-1" id="gameScreen">
+                        <div class="col-md-3">
+                            <div class="color" style="margin-top: 30%;"> <img id= "purple"src="./images/colors/purple_20.png"></div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="color" > <img id="green" src="./images/colors/green_20.png"></div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="color" style="margin-top: 15%;"> <img
+                                id="black" src="./images/colors/black_20.png">
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="color" style="margin-top: 15%;"> <img
+                                id="yellow" src="./images/colors/yellow_20.png"></div>
+                        </div>
+                    </div>
+                        <h2 style="margin-bottom: 3%;" id="instruction">Pick the color...</h2>
+                        <div class="row row-2">
+                            <div class="col-md-3">
+                                <div class="color" style="margin-top: 30%;"> <img
+                                    id="blue" src="./images/colors/blue_20.png"></div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="color"> <img id="red" src="./images/colors/red_20.png"></div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="color" style="margin-top: 15%;"> <img
+                                    id="pink" src="./images/colors/pink_20.png"></div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="color" style="margin-top: 30%;"> <img
+                                    id="orange" src="./images/colors/orange_20.png"></div>
+                            </div>
+                        </div>
+                    
+                </div>
+            </div>
+            <div class="start-button container">
                 <div class="row">
-                    <div class="col-md-3">
-                        <div class="color" style="margin-top: 30%;"> <img src="./images/colors/purple_20.png"></div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="color"> <img src="./images/colors/green_20.png"></div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="color" style="margin-top: 15%;"> <img src="./images/colors/black_20.png"></div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="color" style="margin-top: 15%;"> <img src="./images/colors/yellow_20.png"></div>
-                    </div>
-                    <h3 style="margin-bottom: 3%;">Pick the correct color</h3>
-                    <div class="row">
-                        <div class="col-md-3">
-                            <div class="color" style="margin-top: 30%;"> <img src="./images/colors/blue_20.png"></div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="color"> <img src="./images/colors/red_20.png"></div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="color" style="margin-top: 15%;"> <img src="./images/colors/pink_20.png"></div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="color" style="margin-top: 30%;"> <img src="./images/colors/orange_20.png"></div>
-                        </div>
+                    <div class="col-md-12 text-center">
+                        <button class="btn" id="start-btn">Start</button>
                     </div>
                 </div>
             </div>
         </div>
+
+        <script src="colors.js"></script>
 </body>
 
 </html>
