--- a/home.html
+++ b/home.html
@@ -15,6 +15,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    
     <title>Learning Is Fun!</title>
 </head>
 
@@ -25,7 +26,7 @@
         <div class="row games">
             <div class="col-md-4 colors">
                 <a href="colorsGame.html">
-                    <button class="btn bg-transparent">Colors</button>
+                    <button class="btn bg-transparent" id="colorsBtn">Colors</button>
                 </a>
             </div>
             <div class="col-md-4 shapes">
@@ -41,6 +42,7 @@
         </div>
     </div>
 
+    <script src=home.js></script>
 </body>
 
 </html>
