Added more js functionality. added set timeouts, and hide/unhide to classlists in if else statements.

--- a/colorsGame.html
+++ b/colorsGame.html
@@ -51,6 +51,9 @@
                         </div>
                     </div>
                         <h2 style="margin-bottom: 3%;" id="instruction">Pick the color...</h2>
+                            <div class="wrong hide" id="incorrect">
+                                Sorry, try again!
+                            </div>
                         <div class="row row-2">
                             <div class="col-md-3">
                                 <div class="color" style="margin-top: 30%;"> <img
