Added some smoother functionality in colors game play

--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
     <h3>Choose A Game</h3>
     <div class="container">
         <div class="row games">
-            <div class="col-md-4 colors">
+            <div class="col-md-4">
                 <a href="colorsGame.html">
                     <button class="btn bg-transparent" id="colorsBtn">Colors</button>
                 </a>
