Added some styling to color splashes

--- a/colorsGame.html
+++ b/colorsGame.html
@@ -36,10 +36,12 @@
                     <div class="row row-1" id="gameScreen">
                         <div class="col-md-3">
                             <div class="grow" style="margin-top: 30%;"> <img class="color" id="purple"
-                                    src="./images/colors/purple_20.png"></div>
+                                    src="./images/colors/purple_20.png">
+                            </div>
                         </div>
                         <div class="col-md-3">
-                            <div class="grow"> <img class="color" id="green" src="./images/colors/green_20.png"></div>
+                            <div class="grow"> <img class="color" id="green" src="./images/colors/green_20.png">
+                            </div>
                         </div>
                         <div class="col-md-3">
                             <div class="grow" style="margin-top: 15%;"> <img class="color" id="black"
@@ -48,7 +50,8 @@
                         </div>
                         <div class="col-md-3">
                             <div class="grow" style="margin-top: 15%;"> <img class="color" id="yellow"
-                                    src="./images/colors/yellow_20.png"></div>
+                                    src="./images/colors/yellow_20.png">
+                            </div>
                         </div>
                     </div>
                     <h2 class="instructions" style="margin-bottom: 3% ;" id="instruction">Pick the color...</h2>
@@ -56,18 +59,22 @@
                     <div class="row row-2">
                         <div class="col-md-3">
                             <div class="grow" style="margin-top: 30%;"> <img class="color" id="blue"
-                                    src="./images/colors/blue_20.png"></div>
+                                    src="./images/colors/blue_20.png">
+                            </div>
                         </div>
                         <div class="col-md-3">
-                            <div class="grow"> <img class="color" id="red" src="./images/colors/red_20.png"></div>
+                            <div class="grow"> <img class="color" id="red" src="./images/colors/red_20.png">
+                            </div>
                         </div>
                         <div class="col-md-3">
                             <div class="grow" style="margin-top: 15%;"> <img class="color" id="pink"
-                                    src="./images/colors/pink_20.png"></div>
+                                    src="./images/colors/pink_20.png">
+                            </div>
                         </div>
                         <div class="col-md-3">
                             <div class="grow" style="margin-top: 30%;"> <img class="color" id="orange"
-                                    src="./images/colors/orange_20.png"></div>
+                                    src="./images/colors/orange_20.png">
+                            </div>
                         </div>
                     </div>
 
@@ -80,7 +87,7 @@
                     </div>
                 </div>
             </div>
-            
+
         </div>
 
         <script src="colors.js"></script>
